--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <h1>About me:-</h1>
             <p>Hello everyone, I am first year student peruing b,tech from krishna institute of technology throught CS branch. I have a strong interest in artificial intelligence and machine learning. I look forward to learning and growing both academically and personally during my time in college. My dream was to get good package and work in that copany were we learn something new. I always try to learn something new and work on by skills. Currently i was a member of NSCC club and I also work on some project in web development.</p>
             <H1>My Projects links:-</H1>
-            <a href="">Recipe Finder website</a>
+            <a href="https://ankitmodi989.github.io/recipefinder/index.html">Recipe Finder website</a>
             <br>
             <a href="https://meankit18.github.io/Safe-Ai-Zone/">Public area safety website</a>
         </div>
